--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "require": {
         "php": "^8.2",
-        "laravel/framework": "^10.0 || ^11.0 || ^12.0",
+        "illuminate/support": "^10.0 || ^11.0 || ^12.0",
         "yajra/laravel-datatables-oracle": "^10.0 || ^11.0 || ^12.0",
         "yajra/laravel-datatables-buttons": "^10.0 || ^11.0 || ^12.0",
         "yajra/laravel-datatables-html": "^10.0 || ^11.0 || ^12.0"
